route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: openshift-nginx-hello-git
    app.kubernetes.io/component: openshift-nginx-hello-git
    app.kubernetes.io/instance: openshift-nginx-hello-git
    app.kubernetes.io/name: openshift-nginx-hello-git
    app.kubernetes.io/part-of: openshift-nginx-hello-git-app
  name: openshift-nginx-hello-git
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: openshift-nginx-hello-git
    weight: 100
  wildcardPolicy: None
